fix voucher controller